Closed Bug 1986615 Opened 5 months ago Closed 4 months ago

Set network overwrite (devtools) crashing Firefox

Categories

(DevTools :: Netmonitor, defect, P2)

Firefox 142
defect

Tracking

(firefox-esr115 unaffected, firefox-esr140 wontfix, firefox143 wontfix, firefox144 fixed, firefox145 fixed)

RESOLVED FIXED
145 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr140 --- wontfix
firefox143 --- wontfix
firefox144 --- fixed
firefox145 --- fixed

People

(Reporter: nielspeeters11, Assigned: jdescottes)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:142.0) Gecko/20100101 Firefox/142.0

Steps to reproduce:

I've followed steps as documented under:
https://firefox-source-docs.mozilla.org/devtools-user/network_monitor/network_overrides/index.html

Go to an network call in devtools → Set Network overwrite → Choose to save the file in the downloads directory → reload the page

I am on mac os 15.6.1 MBP M3, but I've seen this behavior as well on windows 10 & 11 devices of colleagues.

Actual results:

After page reload, firefox crashes and needs to be restarted

Expected results:

The page should reload with our specified network call response being replaced with the content in our saved file.

The Bugbug bot thinks this bug should belong to the 'Core::Networking' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Networking
Product: Firefox → Core

Hello Niels,
I could not reproduce this issue on my Mac.
We would need some logs to analyze this further.
Could you please share the crash-id for this? You can find this in about:crashes.
Moving this to devtools for further follow-up on this.

Component: Networking → Netmonitor
Flags: needinfo?(nielspeeters11)
Product: Core → DevTools

Hi Sunil,
Here is the requested information of the submitted crash (re produced today).

crash-id: AF7F9417-93D3-4BF2-B75D-703978C20534

Report contents:
AdapterVendorID: 0x106b
AvailablePhysicalMemory: 76185600
AvailableSwapMemory: 1747779584
BackgroundTaskMode: 0
BuildID: 20250827004350
ContentSandboxCapable: 1
ContentSandboxLevel: 3
CrashTime: 1757317859
DOMFissionEnabled: 1
DOMIPCEnabled: 1
EMCheckCompatibility: true
EventLoopNestingLevel: 1
GpuSandboxLevel: 0
GraphicsNumActiveRenderers: 0
GraphicsNumRenderers: 1
HeadlessMode: 0
InstallTime: 1756886941
LastStartupWasCrash: 0
MacAvailableMemorySysctl: 67
MacMemoryPressure: Normal
MacMemoryPressureCriticalTime: Unset
MacMemoryPressureNormalTime: 1757317729
MacMemoryPressureSysctl: 1
MacMemoryPressureWarningTime: Unset
MozCrashReason: MOZ_RELEASE_ASSERT(!LoadRequireCORSPreflight() || LoadIsCorsPreflightDone()) (CORS preflight must have been finished by the time we call OnStartRequest)
NimbusEnrollments: 1-callout-contextual-chatbot-suggestion-treatment-a-tab-switching-copy-rollout:treatment-a-tab-switching-copy,account-adoption-app-menu-rollout:treatment-a,account-adoption-callout-passwords-global-rollout:treatment-e,address-bar-update-rollout-v1:rollout,ai-chatbot-page-summarization-mvp-treatment-a-callout-badge-rollout:treatment-a-callout-badge,chips-rollout-to-firefox:control,context-id-rotation-every-30-days:control,custom-wallpapers-no-message-rollout-release:control,deprecate-ipaddrany-rollout-for-release:control,desktop-release-rollout-show-relay-to-all-browsers-next-sign-up-modal-cta:next-sign-up-modal-cta,device-migration-accounts-toolbar-icon-rollout:treatment-a,disable-ads-startup-cache:control,disable-enrollment-status-telemetry-for-firefox-desktop-via-nimbustelemetry:control,enable-nimbus-sql-datastore:control,encrypted-client-hello-fallback-mechanism:control,enforce-crlite-results-and-limit-use-of-ocsp-rollout:enforce,fox-doodle-multi-action-cta-2025-rollout:treatment-a,fx-accounts-ping-release-rollout-2:control,login-status-advisory-callout-rollout:treatment-a,long-term-holdback-2025h1-growth-desktop:delivery,mozilla-vpn-in-private-browsing-treatment-d-rollout-en-only:treatment-d,one-click-sponsored-settings:control,pdf-annotations-highlight-treatment-b-rollout:treatment-b,report-this-ad:control,smart-tab-groups-rollout-beta:smart-tab-groups,spoc-positions-and-placements-rollout:control,storage-access-heuristic-restriction-rollout:treatment-branch,unified-api-for-spocs-and-top-sites-controlled-rollout-for-release-133:control,unified-search-button-callout-rollout-v1:control,visual-card-updates:updated
Notes: FP(D10-L1000-W0000000-T01) WR? WR+ GL Context? GL Context+
ProductID: {ec8030f7-c20a-464f-9b0e-13a3a9e97384}
ProductName: Firefox
PurgeablePhysicalMemory: 1560510464
RDDProcessStatus: Running
ReleaseChannel: release
SafeMode: 0
SecondsSinceLastCrash: 430856
StartupCacheValid: 1
StartupCrash: 0
StartupTime: 1757317729
SubmittedFrom: Client
TelemetryEnvironment: {"build":{"applicationId":"{ec8030f7-c20a-464f-9b0e-13a3a9e97384}","applicationName":"Firefox","architecture":"aarch64","buildId":"20250827004350","version":"142.0.1","vendor":"Mozilla","displayVersion":"142.0.1","platformVersion":"142.0.1","xpcomAbi":"aarch64-gcc3","updaterAvailable":true},"partner":{"distributionId":null,"distributionVersion":null,"partnerId":null,"distributor":null,"distributorChannel":null,"partnerNames":[]},"system":{"memoryMB":36864,"virtualMaxMB":null,"cpu":{"count":14,"cores":14,"pcount":10,"mcount":0,"ecount":4,"vendor":"","name":"Apple M3 Max","family":0,"model":0,"stepping":0,"l2cacheKB":4096,"l3cacheKB":0,"speedMHz":0,"extensions":["hasNEON"]},"os":{"name":"Darwin","version":"24.6.0","locale":"en-US"},"hdd":{"profile":{"model":null,"revision":null,"type":null},"binary":{"model":null,"revision":null,"type":null},"system":{"model":null,"revision":null,"type":null}},"gfx":{"D2DEnabled":null,"DWriteEnabled":null,"ContentBackend":"Skia","Headless":false,"TargetFrameRate":60,"textScaleFactor":1,"adapters":[{"description":null,"vendorID":"0x106b","deviceID":null,"subsysID":null,"RAM":0,"driver":null,"driverVendor":null,"driverVersion":null,"driverDate":null,"GPUActive":true}],"monitors":[{"screenWidth":2560,"screenHeight":1440,"defaultCSSScaleFactor":1,"contentsScaleFactor":1},{"screenWidth":2560,"screenHeight":1440,"defaultCSSScaleFactor":1,"contentsScaleFactor":1}],"features":{"compositor":"webrender","hwCompositing":{"status":"available"},"gpuProcess":{"status":"unused"},"webrender":{"status":"available"},"wrCompositor":{"status":"available"},"openglCompositing":{"status":"available"},"omtp":{"status":"unused"}}},"appleModelId":"Mac15,11","hasWinPackageId":null},"settings":{"blocklistEnabled":true,"e10sEnabled":true,"e10sMultiProcesses":8,"fissionEnabled":true,"locale":"en-US","intl":{"requestedLocales":["en-US"],"availableLocales":["en-US"],"appLocales":["en-US"],"systemLocales":["en-US"],"regionalPrefsLocales":["en-US"],"acceptLanguages":["en-US","en"]},"update":{"channel":"release","enabled":true,"autoDownload":true,"background":true},"userPrefs":{"browser.search.region":"BE","browser.urlbar.autoFill":true,"browser.urlbar.autoFill.adaptiveHistory.enabled":false,"browser.urlbar.dnsResolveSingleWordsAfterSearch":0,"browser.urlbar.quicksuggest.dataCollection.enabled":false,"browser.urlbar.suggest.quicksuggest.nonsponsored":false,"browser.urlbar.suggest.quicksuggest.sponsored":false,"media.gmp-gmpopenh264.lastInstallStart":1756886977,"media.gmp-gmpopenh264.lastDownload":1756886978,"media.gmp-gmpopenh264.lastUpdate":1756886978,"media.gmp-widevinecdm.lastInstallStart":1756886977,"media.gmp-widevinecdm.lastDownload":1756886978,"media.gmp-widevinecdm.lastUpdate":1756886978,"network.http.microsoft-entra-sso.enabled":false,"network.trr.strict_native_fallback":false,"widget.content.gtk-high-contrast.enabled":true},"sandbox":{"effectiveContentProcessLevel":3,"contentWin32kLockdownState":3},"addonCompatibilityCheckEnabled":true,"isDefaultBrowser":false,"defaultSearchEngine":"google-b-d","defaultSearchEngineData":{"loadPath":"[app]google","name":"Google","submissionURL":"https://www.google.com/search?client=firefox-b-d&q="}},"profile":{"creationDate":19724,"resetDate":20334,"firstUseDate":19724},"addons":{"activeAddons":{"formautofill@mozilla.org":{"version":"1.0.1","scope":4,"type":"extension","updateDay":0,"isSystem":true,"isWebExtension":true,"multiprocessCompatible":true,"blocklisted":false,"description":null,"name":"Form Autofill","userDisabled":false,"appDisabled":false,"foreignInstall":false,"hasBinaryComponents":false,"installDay":0,"quarantineIgnoredByApp":true,"quarantineIgnoredByUser":false},"newtab@mozilla.org":{"version":"142.0.0","scope":4,"type":"extension","updateDay":0,"isSystem":true,"isWebExtension":true,"multiprocessCompatible":true,"blocklisted":false,"description":"","name":"New Tab","userDisabled":false,"appDisabled":false,"foreignInstall":false,"hasBinaryComponents":false,"installDay":0,"quarantineIgnoredByApp":true,"quarantineIgnoredByUser":false},"pictureinpicture@mozilla.org":{"version":"1.0.0","scope":4,"type":"extension","updateDay":0,"isSystem":true,"isWebExtension":true,"multiprocessCompatible":true,"blocklisted":false,"description":"Fixes for web compatibility with Picture-in-Picture","name":"Picture-In-Picture","userDisabled":false,"appDisabled":false,"foreignInstall":false,"hasBinaryComponents":false,"installDay":0,"quarantineIgnoredByApp":true,"quarantineIgnoredByUser":false},"addons-search-detection@mozilla.com":{"version":"3.0.0","scope":4,"type":"extension","updateDay":0,"isSystem":true,"isWebExtension":true,"multiprocessCompatible":true,"blocklisted":false,"description":"","name":"Add-ons Search Detection","userDisabled":false,"appDisabled":false,"foreignInstall":false,"hasBinaryComponents":false,"installDay":0,"quarantineIgnoredByApp":true,"quarantineIgnoredByUser":false},"webcompat@mozilla.org":{"version":"142.9.0","scope":4,"type":"extension","updateDay":0,"isSystem":true,"isWebExtension":true,"multiprocessCompatible":true,"blocklisted":false,"description":"Urgent post-release fixes for web compatibility.","name":"Web Compatibility Interventions","userDisabled":false,"appDisabled":false,"foreignInstall":false,"hasBinaryComponents":false,"installDay":0,"quarantineIgnoredByApp":true,"quarantineIgnoredByUser":false}},"theme":{"id":"default-theme@mozilla.org","blocklisted":false,"description":"Follow the operating system setting for buttons, menus, and windows.","name":"System theme — auto","userDisabled":false,"appDisabled":false,"version":"1.4.2","scope":4,"foreignInstall":false,"hasBinaryComponents":false,"installDay":20334,"updateDay":20334},"activeGMPlugins":{"gmp-gmpopenh264":{"version":"2.6.0","userDisabled":false,"applyBackgroundUpdates":1},"gmp-widevinecdm":{"version":"4.10.2891.0","userDisabled":false,"applyBackgroundUpdates":1}}},"experiments":{"address-bar-update-rollout-v1":{"branch":"rollout","type":"nimbus-nimbus"},"long-term-holdback-2025h1-growth-desktop":{"branch":"delivery","type":"nimbus-nimbus"},"1-callout-contextual-chatbot-suggestion-treatment-a-tab-switching-copy-rollout":{"branch":"treatment-a-tab-switching-copy","type":"nimbus-rollout"},"account-adoption-app-menu-rollout":{"branch":"treatment-a","type":"nimbus-rollout"},"account-adoption-callout-passwords-global-rollout":{"branch":"treatment-e","type":"nimbus-rollout"},"ai-chatbot-page-summarization-mvp-treatment-a-callout-badge-rollout":{"branch":"treatment-a-callout-badge","type":"nimbus-rollout"},"chips-rollout-to-firefox":{"branch":"control","type":"nimbus-rollout"},"context-id-rotation-every-30-days":{"branch":"control","type":"nimbus-rollout"},"custom-wallpapers-no-message-rollout-release":{"branch":"control","type":"nimbus-rollout"},"deprecate-ipaddrany-rollout-for-release":{"branch":"control","type":"nimbus-rollout"},"desktop-release-rollout-show-relay-to-all-browsers-next-sign-up-modal-cta":{"branch":"next-sign-up-modal-cta","type":"nimbus-rollout"},"device-migration-accounts-toolbar-icon-rollout":{"branch":"treatment-a","type":"nimbus-rollout"},"disable-ads-startup-cache":{"branch":"control","type":"nimbus-rollout"},"disable-enrollment-status-telemetry-for-firefox-desktop-via-nimbustelemetry":{"branch":"control","type":"nimbus-rollout"},"enable-nimbus-sql-datastore":{"branch":"control","type":"nimbus-rollout"},"encrypted-client-hello-fallback-mechanism":{"branch":"control","type":"nimbus-rollout"},"enforce-crlite-results-and-limit-use-of-ocsp-rollout":{"branch":"enforce","type":"nimbus-rollout"},"fox-doodle-multi-action-cta-2025-rollout":{"branch":"treatment-a","type":"nimbus-rollout"},"fx-accounts-ping-release-rollout-2":{"branch":"control","type":"nimbus-rollout"},"login-status-advisory-callout-rollout":{"branch":"treatment-a","type":"nimbus-rollout"},"mozilla-vpn-in-private-browsing-treatment-d-rollout-en-only":{"branch":"treatment-d","type":"nimbus-rollout"},"one-click-sponsored-settings":{"branch":"control","type":"nimbus-rollout"},"pdf-annotations-highlight-treatment-b-rollout":{"branch":"treatment-b","type":"nimbus-rollout"},"report-this-ad":{"branch":"control","type":"nimbus-rollout"},"smart-tab-groups-rollout-beta":{"branch":"smart-tab-groups","type":"nimbus-rollout"},"spoc-positions-and-placements-rollout":{"branch":"control","type":"nimbus-rollout"},"storage-access-heuristic-restriction-rollout":{"branch":"treatment-branch","type":"nimbus-rollout"},"unified-api-for-spocs-and-top-sites-controlled-rollout-for-release-133":{"branch":"control","type":"nimbus-rollout"},"unified-search-button-callout-rollout-v1":{"branch":"control","type":"nimbus-rollout"},"visual-card-updates":{"branch":"updated","type":"nimbus-rollout"}}}
Throttleable: 1
TotalPhysicalMemory: 38654705664
URL: https://www.google.com/?zx=1757317770536&no_sw_cr=1
UptimeTS: 132.25
UtilityProcessStatus: Running
Vendor: Mozilla
Version: 142.0.1
useragent_locale: en-US
This report also contains technical information about the state of the application when it crashed.

Flags: needinfo?(nielspeeters11)

I think you are hitting the same issue as Bug 1940738. Basically you are overriding a request which requires a CORS preflight, which will not be received at the appropriate time.

Status: UNCONFIRMED → NEW
Ever confirmed: true
See Also: → 1940738

So this means the feature is currently broken (or half working with simple requests only).
As a user I'd still would not expect this to crash the browser, and instead work even if its not a simple request.
Akin to how it works on other browsers (chromium for example).

Is there anything planned to inform the user about these dependencies when trying to use this feature?

Assignee: nobody → jdescottes
Severity: -- → S3
Status: NEW → ASSIGNED
Priority: -- → P2

(In reply to Niels from comment #6)

So this means the feature is currently broken (or half working with simple requests only).
As a user I'd still would not expect this to crash the browser, and instead work even if its not a simple request.
Akin to how it works on other browsers (chromium for example).

Is there anything planned to inform the user about these dependencies when trying to use this feature?

This is an annoying bug yes, the plan is to fix it.

Blocks: 1940738
Keywords: regression
Regressed by: 1940738
See Also: 1940738
Attachment #9513515 - Attachment description: Bug 1986615 - Skip CORS preflight check if the response was overridden → Bug 1986615 - Flag CORS preflight as done from HttpChannel.setResponseOverride
Pushed by jdescottes@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/780d59378d93 https://hg.mozilla.org/integration/autoland/rev/1744580a69b9 Flag CORS preflight as done from HttpChannel.setResponseOverride r=necko-reviewers,valentin https://github.com/mozilla-firefox/firefox/commit/9dac9f63e6f7 https://hg.mozilla.org/integration/autoland/rev/046a1f7e0c23 [devtools] Update network override test to check CORS preflight scenario r=devtools-reviewers,bomsy
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 145 Branch
No longer regressed by: 1940738
Regressed by: 1849920
Attachment #9514641 - Flags: approval-mozilla-beta?

firefox-beta Uplift Approval Request

  • User impact if declined: Avoids a potential crash while using a DevTools feature.
  • Code covered by automated testing: yes
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: N/A
  • Risk associated with taking this patch: low
  • Explanation of risk level: The updated code is only triggered by DevTools network override feature and should not impact regular users.
  • String changes made/needed: N/A
  • Is Android affected?: no
Attachment #9514642 - Flags: approval-mozilla-beta?
Attachment #9514642 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9514641 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: