Bug 1986615 - Flag CORS preflight as done from HttpChannel.setResponseOverride r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D264973